# django-channels

./: .env.local  README.md  pyproject.toml  requirements.txt
channels_chatapp/: apps.py  consumer.py  views.py
channels_chatapp/templates/: chat_room.html
chatweb/: asgi.py  settings.py  urls.py
