[project]
name = "django-channels-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.10.0",
    "attrs>=25.4.0",
    "autobahn>=25.10.2",
    "automat>=25.4.16",
    "cffi>=2.0.0",
    "channels>=4.3.1",
    "constantly>=23.10.4",
    "cryptography>=46.0.3",
    "daphne>=4.2.1",
    "django>=5.2.7",
    "hyperlink>=21.0.0",
    "idna>=3.11",
    "incremental>=24.7.2",
    "pyasn1>=0.6.1",
    "pycparser>=2.23",
    "pyopenssl>=25.3.0",
    "service>=0.6.0",
    "six>=1.17.0",
    "sqlparse>=0.5.3",
    "twisted>=25.5.0",
    "txaio>=25.9.2",
    "typing-extensions>=4.15.0",
    "zope-interface>=8.0.1",
]
